cmake_minimum_required(VERSION 2.6)
PROJECT(engine)

if (WIN32)
    set(CMAKE_MODULE_PATH_ADD $ENV{PROGRAMFILES}/OGRE/CMake )
elseif (UNIX)
    set(CMAKE_MODULE_PATH_ADD /usr/lib/OGRE/cmake /usr/lib64/OGRE/cmake /usr/local/lib/OGRE/cmake )
endif ()

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} " " ${CMAKE_MODULE_PATH_ADD} " " ${PROJECT_SOURCE_DIR}/cmake )
MESSAGE(STATUS "Searching in: " ${CMAKE_MODULE_PATH})

set(OGRE_STATIC false)

FIND_PACKAGE(OpenGL)
FIND_PACKAGE(OGRE)
FIND_PACKAGE(OIS)
FIND_PACKAGE(Lua51)
FIND_PACKAGE(Luabind)
SET(Boost_USE_STATIC_LIBS    OFF)
SET(Boost_USE_MULTITHREADED  ON)
SET(Boost_USE_STATIC_RUNTIME OFF)
FIND_PACKAGE(Boost 1.40.0 COMPONENTS thread date_time)

INCLUDE_DIRECTORIES(
	${OpenGL_INCLUDE_DIR}
	${OGRE_INCLUDE_DIRS}
	${OIS_INCLUDE_DIRS}
	${Boost_INCLUDE_DIR}
	${LUA_INCLUDE_DIR}
	${LUABIND_INCLUDE_DIR}
	${PROJECT_SOURCE_DIR}/include
	)

FILE(GLOB SRCS src/*.cpp)
FILE(GLOB HDRS include/*.h)
FILE(GLOB SCRIPTS scripts/*.lua scripts/gui/*.lua)

#INCLUDE( UnityBuild.cmake )
#enable_unity_build( engine SRCS )

ADD_DEFINITIONS(-DGORILLA_USES_EXCEPTIONS=1)

ADD_EXECUTABLE(engine
	${SRCS}
	${HDRS}
    ${SCRIPTS}
	)

TARGET_LINK_LIBRARIES(engine
	${OIS_LIBRARIES}
	${OGRE_LIBRARIES}
	${Boost_LIBRARIES}
	${LUA_LIBRARIES}
    ${LUABIND_LIBRARIES}
	)

INCLUDE( GitVersioning )
enable_git_versioning( engine )

MESSAGE(STATUS "Boost libraries:   " ${Boost_LIBRARIES} )
MESSAGE(STATUS "OIS libraries:     " ${OIS_LIBRARIES} )
MESSAGE(STATUS "OGRE libraries:    " ${OGRE_LIBRARIES} )
MESSAGE(STATUS "LUA libraries:     " ${LUA_LIBRARIES} )
MESSAGE(STATUS "LUABIND libraries: " ${LUABIND_LIBRARIES} )
